--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -94,9 +94,10 @@
    {% endblock css %}
 
     <body>
+      heyy
      {% block body %}
          
-     
+
       <div class="container">
 
     <div class="row mb-2 mt-4">
