--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -191,7 +191,7 @@ h4::first-letter{
        
       
         <div class="col-md-10 "> 
-         <b>{{i.user.get_short_name}}</b>
+         <b>{{i.user}}</b>
 
         
          <span class="text-muted ">{{i.timestamp|naturaltime}}</span>
