--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -189,7 +189,7 @@ h4::first-letter{
       
         <div class="col-md-10 "> 
          <b>{{i.user}}</b>
-
+        <img src="{% static 'staticfiles/dot.png' %}" alt="">
         
          <span class="text-muted ">{{i.timestamp|naturaltime}}</span>
         <div class="comment">   {{i.comment|truncatechars:300}} </div>
