--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -160,8 +160,8 @@ h4::first-letter{
 
 {%endif%}
 
-<div class="container">
- <hr>
+<div class="container border">
+
  
  {% for i in comment  %}
 
@@ -210,7 +210,7 @@ h4::first-letter{
           </form> -->
    
 
-    <hr>
+    
 
 {% endfor %}
 </div>
