--- a/templates/home/contact.html
+++ b/templates/home/contact.html
@@ -1,5 +1,6 @@
 {% extends 'basic.html' %}
-{% block title%}<title>Contact Us</title> {% endblock %}
+
+{% block title%}contact us{% endblock %}
 {% block body %}
 {% if contacted %}
 <div class="alert alert-success alert-dismissible fade show" role="alert">
