--- a/templates/home/contact.html
+++ b/templates/home/contact.html
@@ -14,7 +14,7 @@
 <div class="mb-3">
   {%if user.is_authenticated%}
   <label for="name" class="form-label">Name</label>
-  <input type="name" class="form-control" id="name" value="{{request.user.get_short_name}}" required="true" name='name'placeholder="Enter your name">
+  <input type="name" class="form-control" id="name" value="{{request.user}}" required="true" name='name'placeholder="Enter your name">
   {% else %}
 <label for="name" class="form-label">Name</label>
   <input type="name" class="form-control" id="name"  required="true" name='name'placeholder="Enter your name">
