--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -111,7 +111,7 @@ h4::first-letter{
           <p  style="text-transform: lowercase;" class="blog-post-meta">{{post.pub_date}} By <a href="#">{{post.writer}}</a></p>
 
           <div class="banner" id="banner" >
-            <img src="/media/{{post.thumbnail}}"  alt="My image"  id="banner-img" class="img-thumbnail" alt="Responsive image">
+            <img src="/media/{{post.thumbnail}}"    id="banner-img" class="img-thumbnail" alt="Responsive image">
           </div>
          
            
