--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -121,7 +121,7 @@
        
           
       
-       <img src="/media/{{i.thumbnail}}" style=" height: 100%;" alt="" id="thumbnail" >
+       <img src="/media/{{i.thumbnail}}" style=" height: 100%;"  id="thumbnail" >
             
    
          
