--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -111,7 +111,7 @@ h4::first-letter{
           <p  style="text-transform: lowercase;" class="blog-post-meta">{{post.pub_date}} By <a href="#">{{post.writer}}</a></p>
 
           <div class="banner" id="banner" >
-            <img src="/media/{{post.thumbnail}}"    id="banner-img" class="img-thumbnail" alt="Responsive image">
+            <img src="/media/{{post.thumbnail}}"    id="banner-img" class="img-thumbnail" >
           </div>
          
            
@@ -144,6 +144,7 @@ h4::first-letter{
         <form action="/blog/postComment" method="post">
          {% csrf_token %}
          <form>
+ 
           <div class="mb-3">
             <input type="hidden" name=sno value={{post.post_id}} >
             <input type="text" name=comment class="form-control" placeholder="Enter a public comment" required="true">
