uploading images fix

--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -111,7 +111,7 @@ h4::first-letter{
           <p  style="text-transform: lowercase;" class="blog-post-meta">{{post.pub_date}} By <a href="#">{{post.writer}}</a></p>
 
           <div class="banner" id="banner" >
-          <script>console.log({{post.thumbnail}})</script>
+          <script>console.log({{post.thumbnail.url}})</script>
             <img src="/media/{{post.thumbnail}}"    id="banner-img" class="img-thumbnail" >
           </div>
          
