uploading images fix

--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -112,7 +112,7 @@ h4::first-letter{
 
           <div class="banner" id="banner" >
           <script>console.log({{post.thumbnail.url}})</script>
-            <img src="/media/{{post.thumbnail}}"    id="banner-img" class="img-thumbnail" >
+            <img src="{{post.thumbnail}}"    id="banner-img" class="img-thumbnail" >
           </div>
          
            
