uploading images fix

--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -112,7 +112,7 @@ h4::first-letter{
 
           <div class="banner" id="banner" >
           <script>console.log("/media/"+{{post.thumbnail.url}})</script>
-            <img src="{{ Blogpost_instance.thumbnail.url }}"    id="img" class="img-thumbnail" >
+            <img src="/media/blog/images/Screenshot_5_iua4ng"    id="img" class="img-thumbnail" >
           </div>
          
            
