--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -114,7 +114,7 @@ h4::first-letter{
        
           {% load cloudinary %}
 
-            <img src="https://res.cloudinary.com/dus8g1azl/image/upload/v1/{% cloudinary Blogpost_model_instance.thumbnail.name width=100 height=100,cloud_name => dus8g1azl %}"    id="img" class="img-thumbnail"  >
+            <img src="https://res.cloudinary.com/dus8g1azl/image/upload/v1/{{post.thumbnail}}"    id="img" class="img-thumbnail"  >
           </div>
          
            
