uploading images fix

--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -121,7 +121,7 @@
        
           
       
-       <img src="/media/{{i.thumbnail}}" style=" height: 100%;"  id="thumbnail" >
+       <img src="https://res.cloudinary.com/dus8g1azl/image/upload/v1/{{i.thumbnail}}" style=" height: 100%;"  id="thumbnail" >
             
    
          
