uploading images fix

--- a/templates/home/profile.html
+++ b/templates/home/profile.html
@@ -48,7 +48,7 @@
             
           
        
-        <img src="{{profile.pic.url}}"  id="logoimg" alt="null">
+        <img src="https://res.cloudinary.com/dus8g1azl/image/upload/v1/{{profile.pic.url}}"  id="logoimg" alt="null">
         
     </div>
 
