--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -228,7 +228,7 @@ h4::first-letter{
       
        
         <div class="card mt-3" style="width: 18rem;">
-          <img src="/media/{{other.thumbnail}}" class="card-img-top" id="thumbnail" alt="...">
+          <img src="https://res.cloudinary.com/dus8g1azl/image/upload/v1/{{others.thumbnail}}" class="card-img-top" id="thumbnail" alt="...">
           <div class="card-body">
             <h5 class="card-title">{{other.title|truncatechars:25}}</h5>
             <p class="card-text">{{other.para1|truncatechars:70}}</p>
