uploading images fix

--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -171,7 +171,7 @@ h4::first-letter{
  {% for i in comment  %}
 
 
-     <div class="row my-3 border">
+     <div class="row my-3 border py-2">
         <div class="col-md-2 ">
         
        
@@ -227,7 +227,7 @@ h4::first-letter{
       <div class="p-4 ">
       
        
-        <div class="card mt-3" style="width: 18rem;">
+        <div class="card mt-2" style="width: 18rem;">
           <img src="https://res.cloudinary.com/dus8g1azl/image/upload/v1/{{other.thumbnail}}" class="card-img-top" id="thumbnail" alt="...">
           <div class="card-body">
             <h5 class="card-title">{{other.title|truncatechars:25}}</h5>
