--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -171,7 +171,7 @@ h4::first-letter{
  {% for i in comment  %}
 
 
-     <div class="row my-3 border py-2">
+     <div class="row my-3 border py-3 px-1">
         <div class="col-md-2 ">
         
        
