rich text editor initilised

--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -118,27 +118,12 @@ h4::first-letter{
           </div>
          
            
-          <p  style="text-transform: lowercase;">{{post.postimgdesc}}</p>
+         
           <hr>
            
         <div class="container">
-          <p  style="text-transform: lowercase;"class="con-para">{{post.para1}}</p>
-          <blockquote>
-        
-          <h4  style="text-transform: lowercase;"class="con-para">{{post.head0}}</h4>
-          <p  style="text-transform: lowercase;"class="con-para">{{post.head0para}}</p>
-
-
-          <h4  style="text-transform: lowercase;"class="con-para" >{{post.head1}}</h4>
-
-          <p  style="text-transform: lowercase; "class="con-para"  >{{post.head1para}}</p>
          
-
-          <h4  style="text-transform: lowercase;"class="con-para" >{{post.head2}}</h4>
-
-          <p  style="text-transform: lowercase; "class="con-para" >{{post.head2para}}</p>
-        
-      
+      {{post.content}}
  
         </div>
         </article><!-- /.blog-post -->
