--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -264,10 +264,11 @@ function toggle(){
 
 }
 {% endfor %}
-tinymce.init({
-  selector: 'textarea',  // change this value according to your HTML
-  allow_conditional_comments: true
-});
+var script= document.createElement('script');
+script.type='text/javascript';
+script.src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js";
+document.head.appendChild(script);
+
 
    </script>
 {% endblock %}
