rich text editor initilised

--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -121,7 +121,7 @@ h4::first-letter{
          
           <hr>
            
-        <div class="container">
+        <div class="container" id='content'>
          
       {{post.content}}
  
