--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -123,7 +123,7 @@ h4::first-letter{
            
         <div class="container" id='content'>
          
-      {{post.content}}
+      {{post.content|safeseq}}
  
         </div>
         </article><!-- /.blog-post -->
