rich text editor initilised

--- a/templates/home/search.html
+++ b/templates/home/search.html
@@ -66,7 +66,7 @@
        
           
             <div class="card mt-3" style="width: 18rem;">
-                <img src="/media/{{i.thumbnail}}" class="card-img-top" id="thumbnail" alt="...">
+                <img src="https://res.cloudinary.com/dus8g1azl/image/upload/v1/{{i.thumbnail}}" class="card-img-top" id="thumbnail" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">{{i.title|truncatechars:25}}</h5>
                   <p class="card-text">{{i.para1|truncatechars:45}}</p>
