--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -112,10 +112,10 @@
           
          
             <strong class="d-inline-block mb-2 text-primary">{{i.category}}</strong>
-            <div class="mb-1 text-muted date">{{i.pub_date}}</div>
-            <h4 class="mb-3">{{i.title|truncatechars:25}}</h4>
             
-          
+            <h4 class="mb-0">{{i.title|truncatechars:25}}</h4>
+            <div class="mb-1 text-muted date">{{i.pub_date}}</div>
+            <p class="card-text mb-2">{{i.content||safe|escape}}</p>
             <a href="{{i.slug}}" class="stretched-link sm text-primary" id="continue"> Continue reading...</a>
           </div>
        
