rich text editor initilised

--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -123,7 +123,7 @@ h4::first-letter{
            
      
          
-          <div class="container" id='content'>
+          <div class="col-md-4" id='content'>
          
             {{post.content|safe|escape}}
  
