--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -123,7 +123,7 @@ h4::first-letter{
            
      
          
-          <div class="col-md-4" id='content'>
+          <div class="container" id='content'>
          
             {{post.content|safe|escape}}
  
@@ -148,11 +148,11 @@ h4::first-letter{
 <div class="container">
         </div>
        </form>
-
+</div>
 
 {%endif%}
 
-<div class="container ">
+<div class="col-md-4 ">
 
  
  {% for i in comment  %}
