rich text editor initilised

--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -148,11 +148,11 @@ h4::first-letter{
 <div class="container">
         </div>
        </form>
-</div>
+
 
 {%endif%}
 
-<div class="col-md-4 ">
+<div class="container ">
 
  
  {% for i in comment  %}
