--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -208,7 +208,8 @@ h4::first-letter{
 </div>
       
     
- 
+      </div>
+      <div class="col-md-4">
       <hr>
       {%for other in others%}
       <div class="p-4 ">
