rich text editor initilised

--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -210,9 +210,9 @@ h4::first-letter{
     
       </div>
       <div class="col-md-4">
-      <hr>
+      
       {%for other in others%}
-      <div class="p-4 ">
+      <div class="p-4  mt-4">
       
        
         <div class="card mt-2" style="width: 18rem;">
