--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -69,7 +69,7 @@
     
   
         <article class="blog-post">
-          <h3 class="pb-4 mb-4 font-italic border-bottom" style="text-transform: lowercase;">
+          <h3 class="pb-4 mb-4 font-italic border-bottom">
             {{post.title}}
           </h3>
 {%load static%}
