--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -63,10 +63,9 @@
 {% block body %}
 {% load humanize %}
 
-<div class="container mt-5">
- <div class="row">
-      <div class="col-md-8">
-    
+<div class="container">
+  <div class="row">
+    <div class="col-lg-8 col-md-10 mx-auto">
   
         <article class="blog-post">
           <h3 class="pb-4 mb-4 font-italic border-bottom">
