--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -94,7 +94,8 @@
  
         </div>
         </article><!-- /.blog-post -->
-        <hr>
+        
+        </div></div><hr>
         {%if user.is_authenticated%}
         
         <form action="/blog/postComment" method="post">
@@ -212,9 +213,7 @@
             <li><a href="#">Facebook</a></li>
           </ol>
         </div>
-      </div>
-  
-    </div>
+    
     </div>
 
   {%endblock%}
