--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -150,7 +150,7 @@
           <div class="mb-3">
             <input type="hidden" name=sno value={{post.post_id}} >
             <input type="text" name=comment class="form-control" placeholder="Enter a public comment" required="true">
-          <button type="submit" class="btn btn-primary mt-3">Post</button>
+         
            </div>
        </form>
            {% else %}
@@ -169,7 +169,10 @@
    {% for i in comment  %}
       <div class="col-md-8">
           <div class="media g-mb-30 media-comment">
-              {{i.user|make_list|slice:':1'|join:''}}
+            <div class="logo{{i.sno}} logo"><span id="userlogo">
+          
+              {{i.user.get_short_name|slice:":1"}}</span></div>
+            </div>
               <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30">
                 <div class="g-mb-15">
                   <h5 class="h5 g-color-gray-dark-v1 mb-0">{{i.user}}</h5>
