--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -172,6 +172,7 @@
             <div class="logo{{i.sno}} logo"><span id="userlogo">
           
               {{i.user.get_short_name|slice:":1"}}</span></div>
+              <script>console.log({{i.user.get_short_name|slice:":1"}})</script>
             </div>
               <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30">
                 <div class="g-mb-15">
