--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -102,6 +102,14 @@
 .media-comment {
   margin-top:20px
 }
+header.masthead {
+  margin-bottom: 50px;
+  background: no-repeat center center;
+  background-color: #868e96;
+  background-attachment: scroll;
+  position: relative;
+  background-size: cover;
+}
 {% endblock %}
 
 
