rich text editor initilised

--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -110,6 +110,11 @@ header.masthead {
   position: relative;
   background-size: cover;
 }
+.post-heading .subheading .meta{
+  color: #fff;
+  
+    text-shadow: none;
+}
 {% endblock %}
 
 
