rich text editor initilised

--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -110,7 +110,7 @@ header.masthead {
   position: relative;
   background-size: cover;
 }
-.post-heading .subheading .meta{
+.post-heading, .subheading, .meta{
   color: #fff;
   
     text-shadow: none;
