--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -244,7 +244,7 @@ header.masthead {
             <li><a href="#">Facebook</a></li>
           </ol>
         </div>
-    
+    </div>
     </div>
 
   {%endblock%}
