rich text editor initilised

--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -258,6 +258,7 @@ header.masthead {
   // click listener on button is called 
   if (event.keyCode == 13) { 
     commentbox.innerHTML=""; 
+    console.log("clicked")
   } 
 
 }); 
