--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -257,8 +257,8 @@ header.masthead {
   // if the key pressed is ENTER 
   // click listener on button is called 
   if (event.keyCode == 13) { 
-    commentbox.innerHTML=""; 
-    console.log("clicked")
+    a=commentbox.getAttribute()
+    console.log(a)
   } 
 
 }); 
