rich text editor initilised

--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -257,7 +257,7 @@ header.masthead {
   // if the key pressed is ENTER 
   // click listener on button is called 
   if (event.keyCode == 13) { 
-    a=commentbox.getAttribute('submit')
+    a=commentbox.getAttribute('type')
     console.log(a)
   } 
 
