rich text editor initilised

--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -115,6 +115,14 @@ header.masthead {
   
     text-shadow: none;
 }
+
+header.masthead {
+  height: 50vh;
+}
+.overlay{
+  background:linear-gradient(0deg, rgba(255, 0, 150, 0.3), rgba(255, 0, 150, 0.3))
+}
+
 {% endblock %}
 
 
