rich text editor initilised

--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -133,7 +133,7 @@ header.masthead {
        
 {% load cloudinary %}
 
-<header class="masthead" style="background: url('https://res.cloudinary.com/dus8g1azl/image/upload/v1/{{post.thumbnail}} ')rgba(255, 0, 150, 0.3)">
+<header class="masthead" style="background: url('https://res.cloudinary.com/dus8g1azl/image/upload/v1/{{post.thumbnail}} ')">
   <div class="overlay"></div>
   <div class="container">
     <div class="row">
