rich text editor initilised

--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -118,7 +118,12 @@ header.masthead {
 
 header.masthead {
   height: 50vh;
-  
+  background: 
+    /* top, transparent red, faked with gradient */ 
+    linear-gradient(
+      rgba(255, 0, 0, 0.45), 
+      rgba(255, 0, 0, 0.45)
+    )
   background-size:cover;
   background-blend-mode: multiply;
 }
