--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -110,12 +110,19 @@ header.masthead {
   position: relative;
   background-size: cover;
 }
-.post-heading, .subheading, .meta{
-  color: #fff;
-  
-    text-shadow: none;
+header.masthead .post-heading h1 {
+  font-size: 35px;
 }
-
+h1,h2,h3,h4,h5,span,p::selection {
+  color: #fff;
+  background: #0085a1;
+  text-shadow: none
+}
+header>h1, h2, h3, h4, h5, h6 {
+  color:#fff;
+  font-weight: 800;
+  font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+}
 header.masthead {
   height: 50vh;
   background: 
