rich text editor initilised

--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -113,7 +113,7 @@ header.masthead {
 header.masthead .post-heading h1 {
   font-size: 35px;
 }
-h1,h2,h3,h4,h5,span,p::selection {
+::selection {
   color: #fff;
   background: #0085a1;
   text-shadow: none
