rich text editor initilised

--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -118,8 +118,8 @@ header.masthead .post-heading h1 {
   background: #0085a1;
   text-shadow: none
 }
-header>h1, h2, h3, h4, h5, h6 {
-  color:#fff;
+h1, h2, h3, h4, h5, h6,p,span {
+  
   font-weight: 800;
   font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
 }
