--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -118,10 +118,15 @@ header.masthead .post-heading h1 {
   background: #0085a1;
   text-shadow: none
 }
-h1, h2, h3, h4, h5, h6,p,span {
-  
-  font-weight: 800;
-  font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+header.masthead .post-heading .subheading {
+  font-size: 24px;
+  font-weight: 600;
+  margin: 10px 0 30px;
+  font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;}
+
+  header.masthead .post-heading .meta, header.masthead .post-heading .subheading {
+    line-height: 1.1;
+    display: block;
 }
 header.masthead {
   height: 50vh;
