--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -122,6 +122,7 @@ header.masthead .post-heading .subheading {
   font-size: 24px;
   font-weight: 600;
   margin: 10px 0 30px;
+  color:#fff;
   font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;}
 
   header.masthead .post-heading .meta, header.masthead .post-heading .subheading {
