--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -118,6 +118,9 @@ header.masthead .post-heading h1 {
   background: #0085a1;
   text-shadow: none
 }
+.post-heading > h1{
+  color:#fff;
+}
 header.masthead .post-heading .subheading {
   font-size: 24px;
   font-weight: 600;
@@ -128,6 +131,7 @@ header.masthead .post-heading .subheading {
   header.masthead .post-heading .meta, header.masthead .post-heading .subheading {
     line-height: 1.1;
     display: block;
+    color:#fff;
 }
 header.masthead {
   height: 50vh;
