rich text editor initilised

--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -133,7 +133,7 @@ header.masthead .post-heading .subheading{font-size:30px}}
         <div class="post-heading">
           <h1>{{post.title}}</h1>
           <h2 class="subheading">{{post.imtro}}</h2>
-          <span class="meta">Posted by
+          <span class="meta mt-3">Posted by
             <a href="#">{{post.writer}}</a>
             {{post.pub_date}}</span>
         </div>
