--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -132,7 +132,7 @@ header.masthead .post-heading .subheading{font-size:30px}}
       <div class="col-lg-8 col-md-10 mx-auto">
         <div class="post-heading">
           <h1>{{post.title}}</h1>
-          <h2 class="subheading">{{post.imtro}}</h2>
+          <h2 class="subheading">{{post.imtro|truncatechars:70}}</h2>
           <span class="meta mt-3">Posted by
             <a href="#">{{post.writer}}</a>
             {{post.pub_date}}</span>
