rich text editor initilised

--- a/templates/basic.html
+++ b/templates/basic.html
@@ -141,7 +141,7 @@
             
          
             </form>
-            
+            <a href="{% url 'social:begin' 'github' %}">Login with GitHub</a><br>
 
         </div>
     
