--- a/templates/basic.html
+++ b/templates/basic.html
@@ -143,7 +143,7 @@
             </form>
             <a href="{% url 'social:begin' 'github' %}">Login with GitHub</a><br>
             <a href="{% url 'social:begin' 'facebook' %}">Login with Facebook</a>
-            <a href='{% url "social:begin" "google-oauth2" %}'>Google+</a>
+            <a href='{% url "social:begin" "google" %}'>Google+</a>
 
         </div>
     
