--- a/templates/basic.html
+++ b/templates/basic.html
@@ -143,7 +143,7 @@
             </form>
             {% load socialaccount %}
 
-          <a href="{% provider_login_url 'openid' openid='https://www.google.com/accounts/o8/id' next='/success/url/'%}"> Google</a>
+            <a href="{% url 'account_login' %}">Login?</a>
             <a href="{% url 'social:begin' 'github' %}">Login with GitHub</a><br>
             <a href="{% url 'social:begin' 'facebook' %}">Login with Facebook</a>
             <a href='{% url "social:begin" "google" %}'>Google+</a>
