rich text editor initilised

--- a/templates/basic.html
+++ b/templates/basic.html
@@ -142,9 +142,9 @@
          
             </form>
             {% load socialaccount %}
-
-            <a href="{% url 'google_login' %}">Login with google</a>
-            <a href="{% url 'social:begin' 'github' %}">Login with GitHub</a><br>
+            <div class="box"><a href="{% url 'google_login' %}">Login with google</a></div>
+             <div class="box"> <a href="{% url 'social:begin' 'github' %}">Login with GitHub</a><br></div>
+           
             
 
         </div>
