--- a/templates/basic.html
+++ b/templates/basic.html
@@ -9,7 +9,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,100&family=Sofia&display=swap" rel="stylesheet">
     <title>{% block title%} {% endblock %}</title>
@@ -142,7 +142,15 @@
          
             </form>
             {% load socialaccount %}
-            <div class="box"><a href="{% url 'google_login' %}">Login with google</a></div>
+
+            <div class="col">
+            
+            
+              <a href="{% url 'google_login' %}" class="google btn"><i class="fa fa-google fa-fw">
+                </i> Login with Google+
+              </a>
+            </div>
+          
              <div class="box"> <a href="{% url 'social:begin' 'github' %}">Login with GitHub</a><br></div>
            
             
