--- a/templates/basic.html
+++ b/templates/basic.html
@@ -149,9 +149,10 @@
               <a href="{% url 'google_login' %}" class="google btn"><i class="fa fa-google fa-fw">
                 </i> Login with Google+
               </a>
+              <a href="{% url 'social:begin' 'github' %}"><i class="fab fa-github"></i>Login with GitHub</a>
             </div>
           
-             <div class="box"> <a href="{% url 'social:begin' 'github' %}">Login with GitHub</a><br></div>
+          
            
             
 
