--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -112,10 +112,10 @@
           
          
             <strong class="d-inline-block mb-2 text-primary">{{i.category}}</strong>
-            
-            <h4 class="mb-0">{{i.title|truncatechars:25}}</h4>
             <div class="mb-1 text-muted date">{{i.pub_date}}</div>
-            <p class="card-text mb-2">{{i.imtro|truncatechars:50 }}</p>
+            <h4 class="mb-0">{{i.title}}</h4>
+           
+        
             <a href="{{i.slug}}" class="stretched-link sm text-primary" id="continue"> Continue reading...</a>
           </div>
        
