--- a/templates/basic.html
+++ b/templates/basic.html
@@ -35,6 +35,18 @@
   color: white;
 
 }
+.btnnn {
+  width: 100%;
+  padding: 12px;
+  border: none;
+  border-radius: 4px;
+  margin: 5px 0;
+  opacity: 0.85;
+  display: inline-block;
+  font-size: 17px;
+  line-height: 20px;
+  text-decoration: none; /* remove underline from anchors */
+}
        {% block css %} 
   
        {% endblock %}
@@ -165,10 +177,10 @@
             <div class="col">
             
             
-              <a href="{% url 'google_login' %}" class="google btn"><i class="fa fa-google fa-fw">
+              <a href="{% url 'google_login' %}" class="google btnnn"><i class="fa fa-google fa-fw">
                 </i> Login with Google+
               </a>
-        <a href="{% url 'social:begin' 'github' %}" class="github btn"><i class="fab fa-github"></i>Login with GitHub</a>
+        <a href="{% url 'social:begin' 'github' %}" class="github btnnn"><i class="fab fa-github"></i>Login with GitHub</a>
             </div>
           
           
