--- a/templates/basic.html
+++ b/templates/basic.html
@@ -145,30 +145,7 @@
         </div>
         <div class="modal-body">
           
-          <form action="/login/" method="POST"> {% csrf_token %}
-            <div class="mb-3">
-              <label for="name" class="form-label">username</label>
-              <input type="name" class="form-control" id="loginusername" required="true" name='loginusername'placeholder="Enter your name">
-            </div>
-              
-            <div class="mb-3">
-        
-              <label for="inputPassword4" class="form-label">Password</label>
-              <input type="password" class="form-control" name="loginpass" id="loginpass">
-
-          </div>
-
-            <div class="form-check">
-            
-                 
-             <button type="submit" href="#" class="btn btn-primary active" aria-current="page">Submit</button>
-            </div>
-            
-        
-            
-            
-         
-            </form>
+   
             {% load socialaccount %}
 
             <div class="col">
@@ -181,7 +158,30 @@
             </div>
           
           
+            <form action="/login/" method="POST"> {% csrf_token %}
+              <div class="mb-3">
+                <label for="name" class="form-label">username</label>
+                <input type="name" class="form-control" id="loginusername" required="true" name='loginusername'placeholder="Enter your name">
+              </div>
+                
+              <div class="mb-3">
+          
+                <label for="inputPassword4" class="form-label">Password</label>
+                <input type="password" class="form-control" name="loginpass" id="loginpass">
+  
+            </div>
+  
+              <div class="form-check">
+              
+                   
+               <button type="submit" href="#" class="btn btn-primary active mb-3 " aria-current="page">Submit</button>
+              </div>
+              
+          
+              
+              
            
+              </form> 
             
 
         </div>
