--- a/templates/basic.html
+++ b/templates/basic.html
@@ -29,10 +29,12 @@
 .google {
   background-color: #dd4b39;
   color: white;
+  text-decoration: none;
 }
 .github{
   background-color: #333;
   color: white;
+  text-decoration: none;
 
 }
 .btnnn {
@@ -47,6 +49,10 @@
   line-height: 20px;
   text-decoration: none; /* remove underline from anchors */
 }
+.btn:hover {
+  opacity: 1;
+}
+
        {% block css %} 
   
        {% endblock %}
