--- a/templates/basic.html
+++ b/templates/basic.html
@@ -163,8 +163,8 @@
         <a href="{% url 'social:begin' 'github' %}" class="github btnnn"><i class="fab fa-github"></i>Login with GitHub</a>
             </div>
             <br>
-            <hr>
-            <h6 class="text-muted">Or login manually</h6>
+            
+            <h6 class="text-muted mb-2 mt-2">Or login manually</h6>
           
             <form action="/login/" method="POST"> {% csrf_token %}
               <div class="mb-1">
