--- a/templates/basic.html
+++ b/templates/basic.html
@@ -157,10 +157,10 @@
             <div class="col">
             
             
-              <a href="{% url 'google_login' %}" class="google btnnn"><i class="fa fa-google fa-fw">
+              <a href="{% url 'google_login' %}" class="google btnnn" style="text-decoration: none;"><i class="fa fa-google fa-fw">
                 </i> Login with Google+
               </a>
-        <a href="{% url 'social:begin' 'github' %}" class="github btnnn"><i class="fab fa-github"></i>Login with GitHub</a>
+        <a href="{% url 'social:begin' 'github' %}" class="github btnnn" style="text-decoration: none;"><i class="fa fa-github"></i>     Login with GitHub</a>
             </div>
             <br>
             
