--- a/templates/basic.html
+++ b/templates/basic.html
@@ -161,6 +161,8 @@
                 </i> Login with Google+
               </a>
         <a href="{% url 'social:begin' 'github' %}" class="github btnnn" style="text-decoration: none;"><i class="fa fa-github"></i> Login with GitHub</a>
+
+        <a href="{% url 'social:begin' 'facebook' %}" class="fb btnnn" style="text-decoration: none;"><i class="fa fa-github"></i> Login with Facebook</a>
             </div>
             <br>
             
