--- a/templates/basic.html
+++ b/templates/basic.html
@@ -20,6 +20,10 @@
   background-color: #3B5998;
   color: white;
 }
+.col > a{
+  text-decoration: none;
+  color: #fff;
+}
 
 .twitter {
   background-color: #55ACEE;
@@ -162,7 +166,7 @@
               </a>
         <a href="{% url 'social:begin' 'github' %}" class="github btnnn" style="text-decoration: none;"><i class="fa fa-github"></i> Login with GitHub</a>
 
-        <a href="{% url 'social:begin' 'facebook' %}" class="fb btnnn" style="text-decoration: none;"><i class="fa fa-github"></i> Login with Facebook</a>
+        <a href="{% url 'social:begin' 'facebook' %}" class="fb btnnn" style="text-decoration: none;"><i class="fa fa-facebook"></i> Login with Facebook</a>
             </div>
             <br>
             
