--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -81,6 +81,11 @@
     margin-top:0.2rem;
     font-size:0.7rem;
   }
+  h4.mb-2 {
+    font-size: 1rem;
+    font-weight: initial;
+    /* font: icon; */
+  }
 
 
   {% comment %} .col .p-4 .d-flex .flex-column .position-static{
