--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -44,6 +44,12 @@
   padding:2rem;
 
 }
+h4.mb-2 {
+  font-size: 1rem;
+  font-weight: initial;
+  /* font: icon; */
+}
+
 
 @media only screen and (max-width: 768px) {
 
@@ -117,7 +123,7 @@
             <div class="mb-1 text-muted date">{{i.pub_date}}</div>
             <h4 class="mb-2">{{i.title}}</h4>
            
-             <p class="text-muted" id="imtro">{{post.imtro|truncatechars:30}}</p>
+             <p class="text-muted" id="imtro">{{i.imtro|truncatechars:30}}</p>
             <a href="{{i.slug}}" class="stretched-link sm text-primary" id="continue"> Continue reading...</a>
           </div>
        
