--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -107,7 +107,7 @@ h4.mb-2 {
          
 
       <div class="container">
-
+        {% load humanize %}
     <div class="row mb-2 mt-4">
      {% for i in blog %}
       
