--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -124,7 +124,7 @@ h4.mb-2 {
             <h4 class="mb-2">{{i.title}}</h4>
            
              <p class="text-muted" id="imtro">{{i.imtro|truncatechars:30}}</p>
-            <a href="{{i.slug}}" class="stretched-link sm text-primary" id="continue"> Continue reading...</a>
+            <a href="{{i.slug}}" class="stretched-link sm text-primary" id="continue">..</a>
           </div>
        
           
