--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -142,7 +142,7 @@ header.masthead .post-heading .subheading{font-size:30px}}
   </div>
 </header>
 
-
+{% post_to_facebook_url <object_or_url> %}
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-md-10 mx-auto">
