--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -142,7 +142,9 @@ header.masthead .post-heading .subheading{font-size:30px}}
   </div>
 </header>
 
-{% post_to_facebook_url <object_or_url> %}
+<a href="">{% post_to_facebook <object_or_url> <link_text> <link_class> %}</a>
+  
+{% autoescape %}
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-md-10 mx-auto">
