--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -142,7 +142,8 @@ header.masthead .post-heading .subheading{font-size:30px}}
   </div>
 </header>
 
-
+{% load social_share %}
+{% post_to_facebook <object_or_url> "post to facebook !" %}
 
 <div class="container">
   <div class="row">
