--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -143,7 +143,8 @@ header.masthead .post-heading .subheading{font-size:30px}}
 </header>
 
 {% load social_share %}
-{% post_to_facebook <object_or_url> "post to facebook !" %}
+
+{% post_to_facebook object_or_url "Post to Facebook!" %}
 
 <div class="container">
   <div class="row">
