--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -147,7 +147,8 @@ header.masthead .post-heading .subheading{font-size:30px}}
 {% post_to_facebook object_or_url "Post to Facebook!" %}
 {% send_email object.title ": {{object.title}}. Check it out!" object_or_url "Share via email" %}
 {% post_to_whatsapp object_or_url "Share via WhatsApp" %}
-{% post_to_telegram ": {{object.title}}" object_or_url %}
+{% post_to_telegram "New Song: {{object.title}}" <object_or_url> %}
+
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-md-10 mx-auto">
