--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -145,9 +145,9 @@ header.masthead .post-heading .subheading{font-size:30px}}
 {% load social_share %}
 {% post_to_facebook object_or_url " " "fa fa-facebook" %}
 {% send_email object.title " {{object.title}}. " " " "fa fa-envelope" object_or_url  %}
-{% post_to_whatsapp object_or_url " " "fa fa-whatsapp" %}</i>
+{% post_to_whatsapp object_or_url " " "fa fa-whatsapp" %}
 {% post_to_telegram "{{object.title}}" object_or_url " " "fa fa-telegram"%}
-<i class="fa fa-clipboard"></i>
+
 
 <div class="container">
   <div class="row">
