--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -116,6 +116,16 @@ header.masthead .post-heading .meta a{color:#fff}
   header.masthead .post-heading h1{font-size:55px}
 header.masthead .post-heading .subheading{font-size:30px}}
 
+
+  .fa{
+    height:50px;
+    width:50px;
+    text-align:center;
+    line-height:50px;
+    background-color: #fff;
+    border-radius:2px;
+  }
+
 {% endblock %}
 
 
