--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -125,7 +125,23 @@ header.masthead .post-heading .subheading{font-size:30px}}
     background-color: #fff;
     border-radius:2px;
   }
+  .facebook{
+    background-color: #3B5998;
+    color: white;
+  }
+  
 
+.google {
+  background-color: #dd4b39;
+  color: white;
+  text-decoration: none;
+}
+.github{
+  background-color: #333;
+  color: white;
+  text-decoration: none;
+
+}
 {% endblock %}
 
 
