--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -136,6 +136,9 @@ header.masthead .post-heading .subheading{font-size:30px}}
   color: white;
   text-decoration: none;
 }
+a{
+  text-decoration:none;
+}
 .github{
   background-color: #333;
   color: white;
