--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -145,6 +145,20 @@ a{
   text-decoration: none;
 
 }
+.whatsapp{
+  color:#fff;
+  background:
+   linear-gradient(#25d366,#25d366) 14% 84%/16% 16% no-repeat,
+   radial-gradient(#25d366 60%,transparent 0);
+}
+.email{
+  color:#fff;
+  background:#333;
+}
+.telegram{
+  color:#fff;
+  background:#0088cc; 
+}
 {% endblock %}
 
 
