--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -186,6 +186,7 @@ a{
 </header>
 
 {% load social_share %}
+<div class="social-icons">
 {% post_to_facebook object_or_url " " "fa fa-facebook facebook" %}
 {% send_email object.title "New post: {{object.title}}. Check it out!" object_or_url " " "fa fa-envelope email" %}
 
@@ -193,7 +194,7 @@ a{
 {% post_to_whatsapp object_or_url " " "fa fa-whatsapp whatsapp" %}
 {% post_to_telegram "{{object.title}}" object_or_url " " "fa fa-telegram telegram"%}
 
-
+</div>
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-md-10 mx-auto">
