--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -114,6 +114,15 @@ header.masthead .post-heading .meta{font-size:20px;font-weight:300;font-style:it
 header.masthead .post-heading .meta a{color:#fff}
 @media only screen and (min-width:768px){
   header.masthead .post-heading h1{font-size:55px}
+  .social-icons {
+    position: absolute;
+    right: 0;
+    /* background: beige; */
+    right: 0;
+    top: 134vh;
+    background: transparent;
+}
+
 header.masthead .post-heading .subheading{font-size:30px}}
 
 
@@ -130,7 +139,17 @@ header.masthead .post-heading .subheading{font-size:30px}}
     color: white;
   }
   
-
+  .social-icons {
+    position: absolute;
+    right: 0;
+    /* background: beige; */
+    right: 0;
+    top: 134vh;
+    background: transparent;
+}
+.social-icons > a:hover{
+  color:#fff;
+}
 .google {
   background-color: #dd4b39;
   color: white;
