--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -124,7 +124,9 @@ header.masthead .post-heading .meta a{color:#fff}
 }
 
 header.masthead .post-heading .subheading{font-size:30px}}
-
+a.fa.fa-facebook.facebook:hover, a.fa.fa-envelope.email:hover, a.fa.fa-whatsapp.whatsapp:hover, a.fa.fa-telegram.telegram:hover {
+  color: #fff;
+}
 
   .fa{
     height:50px;
