--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -114,14 +114,7 @@ header.masthead .post-heading .meta{font-size:20px;font-weight:300;font-style:it
 header.masthead .post-heading .meta a{color:#fff}
 @media only screen and (min-width:768px){
   header.masthead .post-heading h1{font-size:55px}
-  .social-icons {
-    position: absolute;
-    right: 0;
-    /* background: beige; */
-    right: 0;
-    top: 134vh;
-    background: transparent;
-}
+
 
 header.masthead .post-heading .subheading{font-size:30px}}
 a.fa.fa-facebook.facebook:hover, a.fa.fa-envelope.email:hover, a.fa.fa-whatsapp.whatsapp:hover, a.fa.fa-telegram.telegram:hover {
@@ -179,6 +172,20 @@ a{
 .telegram{
   color:#fff;
   background:#0088cc; 
+}
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  {
+    .social-icons {
+      position: absolute;
+      right: 0;
+      /* background: beige; */
+      right: 0;
+      top: 134vh;
+      background: transparent;
+  }
 }
 {% endblock %}
 
