--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -174,10 +174,8 @@ a{
   background:#0088cc; 
 }
 
-@media only screen 
-  and (min-device-width: 320px) 
-  and (max-device-width: 480px)
-  {
+@media only screen and (min-device-width: 320px) 
+ {
     .social-icons {
       position: absolute;
       right: 0;
