--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -173,9 +173,8 @@ a{
   color:#fff;
   background:#0088cc; 
 }
+@media only screen and (max-device-width: 480px) {
 
-@media only screen and (min-device-width: 700px) 
- {
     .social-icons {
       position: absolute;
       right: 0;
