--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -142,16 +142,14 @@ a.fa.fa-facebook.facebook:hover, a.fa.fa-envelope.email:hover, a.fa.fa-whatsapp.
     top: 134vh;
     background: transparent;
 }
-@media only screen and (max-device-width: 480px) {
 
-  .social-icons {
-    position: absolute;
-    right: 0;
- 
-    right: 0;
-    top: 134vh;
-    background: transparent;
-}
+
+@media only screen and (max-width: 768px) {
+
+
+  .social-icons{
+  position:absolute;
+  top:0;
 }
 .social-icons > a:hover{
   color:#fff;
