--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -151,6 +151,28 @@ a.fa.fa-facebook.facebook:hover, a.fa.fa-envelope.email:hover, a.fa.fa-whatsapp.
   position:absolute;
   top:0;
 }
+@media only screen and (max-width: 480px) {
+
+
+  .social-icons{
+  position:absolute;
+  top:0;
+}
+@media only screen and (min-width:375px ) {
+
+
+  .social-icons{
+  position:absolute;
+  top:0;
+}
+@media only screen and (max-width: 1024px) {
+
+
+  .social-icons{
+  position:absolute;
+  top:0;
+}
+
 .social-icons > a:hover{
   color:#fff;
 }
